--- a/main.html
+++ b/main.html
@@ -13,6 +13,7 @@
                    connect-src * ws: wss:;">
     <title>VCPChat</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/advancedPromptEditor.css">
     <link rel="stylesheet" href="vendor/katex.min.css" crossorigin="anonymous">
     <script defer src="vendor/katex.min.js" crossorigin="anonymous"></script>
     <script defer src="vendor/auto-render.min.js" crossorigin="anonymous"></script>
@@ -105,7 +106,7 @@
                         </div>
                         <div>
                             <label for="agentSystemPrompt">系统提示词 (可使用 `{{AgentName}}` 占位符):</label>
-                            <textarea id="agentSystemPrompt" name="systemPrompt" rows="6"></textarea>
+                            <div id="advancedPromptEditorContainer" class="advanced-prompt-editor-container"></div>
                         </div>
                         <div>
                             <label for="agentModel">模型名称:</label>
@@ -485,6 +486,7 @@
     <script src="modules/chatManager.js"></script>
     <script src="modules/uiManager.js"></script>
     <script src="modules/settingsManager.js"></script>
+    <script src="modules/advancedPromptEditor.js"></script>
     <script src="modules/ui-helpers.js"></script>
     <script src="vendor/Sortable.min.js"></script>
     <script src="Groupmodules/grouprenderer.js"></script>
